--- a/templates/index.html
+++ b/templates/index.html
@@ -79,39 +79,32 @@ a:hover{
 <!-- <class="Marriage> <h3>Marriage and Divorce rates by State</h3></class>    -->
   <!-- <p>Marriage and divorce rates currently may be calculated from provisional counts received from State health departments. Trend marriage and divorce rates by State for 1990, 1995, and 1999-2018 are available</p> -->
  <class="Marriage">
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="state_marriage.JSON">Marriage
-  <input type="radio" name="browser" onclick="myFunction(this.value)" value="state_divorce.JSON">Divorce
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="/api/v1.0/MarriageByState">Marriage
+  <input type="radio" name="browser" onclick="myFunction(this.value)" value="/api/v1.0/DivorceByState">Divorce
   <input class="searchBox" id="Year" type="text" placeholder="2018" maxlength="4" size="4">
   <button id="filter-btn" type="button" >Search</button>
 </class> 
   <div class="container-fluid">
     <div class="row rowmain">
-    <div class="col-md-5">  
-      <div id="vis"></div>
-    </div>
-    <div class="col-md-5">  
-      <div id="line"></div>
-    </div>
-    <div class="col-md-5">  
-      <div id="bar"></div>
-    </div>
-    </div>
-  </div>
+    <div class="col-md-6">  
+  <div id="vis"></div>
+</div>
+<div class="col-md-6">  
+  <div id="line"></div>
+</div>
+</div>
+</div>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="//d3js.org/queue.v1.min.js"></script>
-<!-- <script src="../static/js/d3-legend.min.js"></script> -->
+<script src="../static/js/d3-legend.min.js"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/granim/2.0.0/granim.js"></script>
-<!-- <script type="text/javascript"src="../static/js/map.js"></script> -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script type="text/javascript"src="../static/js/chart.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src='../static/js/line.js'></script>
-<script src='../static/js/chart-bar.js'></script>
 </body>
 </html>
