--- a/templates/index.html
+++ b/templates/index.html
@@ -40,17 +40,17 @@ a:hover{
   color: #fff;
   border-radius: 2px;
 }
-.bloc-logo {
+/* .bloc-logo {
     position: relative;
     width: 130px;
     height: 100px;
     float: center;
-}
+} */
 
 .bloc-logo canvas,
 .bloc-logo .logo-mask {
     display: block;
-    width: 1600px;
+    width: 100%;
     height: 100px;
     font-weight:5 00px;
     color: #fff;
@@ -71,9 +71,15 @@ a:hover{
 
 </style>
 <body>
-  <div class="bloc-logo">
-    <canvas id="logo-canvas"></canvas>
-    <a href="index.html" class="logo-mask"><h2>Marriage isn't Dead Yet</h2></a>
+  <div class="container-fluid">
+    <div class="row rowheader">
+    <div class="col-md-12">  
+      <div class="bloc-logo">
+        <canvas id="logo-canvas"></canvas>
+        <a href="index.html" class="logo-mask"><h2>Marriage isn't Dead Yet</h2></a>
+    </div>
+</div>
+</div>
 </div>
 <br>
 <!-- <class="Marriage> <h3>Marriage and Divorce rates by State</h3></class>    -->
@@ -94,6 +100,7 @@ a:hover{
 </div>
 </div>
 </div>
+<p>Marriage and divorce rates currently may be calculated from provisional counts received from State health departments. Trend marriage and divorce rates by State for 1990, 1995, and 1999-2018 are available</p>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="//d3js.org/queue.v1.min.js"></script>
 <script src="../static/js/d3-legend.min.js"></script>
