--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,7 @@
-
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 <style>
-
 
 body {
     font-family: "Open Sans", sans-serif;
@@ -40,12 +38,6 @@ a:hover{
   color: #fff;
   border-radius: 2px;
 }
-/* .bloc-logo {
-    position: relative;
-    width: 130px;
-    height: 100px;
-    float: center;
-} */
 
 .bloc-logo canvas,
 .bloc-logo .logo-mask {
@@ -68,7 +60,6 @@ a:hover{
     text-decoration: none;
     color: black;
 }
-
 </style>
 <body>
   <div class="container-fluid">
@@ -90,25 +81,29 @@ a:hover{
   <input class="searchBox" id="Year" type="text" placeholder="2018" maxlength="4" size="4">
   <button id="filter-btn" type="button" >Search</button>
 </class> 
-  <div class="container-fluid">
-    <div class="row rowmain">
-    <div class="col-md-6">  
-  <div id="vis"></div>
+<div class="container-fluid">
+  <div class="row rowmain">
+    <div class="col-md-5">  
+      <div id="vis"></div>
+    </div>
+    <div class="col-md-7">  
+      <div id="chart"></div>
+    </div>
+  </div>
 </div>
-<div class="col-md-6">  
-  <div id="line"></div>
-</div>
-</div>
-</div>
-<p>Marriage and divorce rates currently may be calculated from provisional counts received from State health departments. Trend marriage and divorce rates by State for 1990, 1995, and 1999-2018 are available</p>
+<hr>
+<p>Trend for years 1990, 1995, and 1999-2018 are the only available data set. Marriage and divorce rates are calculated from provisional counts received from State health departments. </p>
+<a href="about.html"><h6>About</h6></a>
+<a href="https://www.cdc.gov/nchs/nvss/marriage-divorce.htm " target="_blank"><h6>Data Source</h6></a>   
+<p> &copy; <i>Copyright UofM Data Bootcamp 2020</i></p>        
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="//d3js.org/queue.v1.min.js"></script>
 <script src="../static/js/d3-legend.min.js"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-<script src = "https://cdnjs.cloudflare.com/ajax/libs/granim/2.0.0/granim.js"></script>
+<script src ="https://cdnjs.cloudflare.com/ajax/libs/granim/2.0.0/granim.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script type="text/javascript"src="../static/js/chart.js"></script>
+<script type="text/javascript"src="../static/js/charts.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
