Updated the code

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,16 +83,16 @@ a:hover{
 </class> 
 <div class="container-fluid">
   <div class="row rowmain">
-    <div class="col-md-5">  
+    <div class="col-md-6">  
       <div id="vis"></div>
     </div>
-    <div class="col-md-7">  
+    <div class="col-md-6">  
       <div id="chart"></div>
     </div>
   </div>
 </div>
 <hr>
-<p>Trend for years 1990, 1995, and 1999-2018 are the only available data set. Marriage and divorce rates are calculated from provisional counts received from State health departments. </p>
+<p><i>Trend for years 1990, 1995, and 1999-2018 are the only available data set(Rate per 1,000 total). Marriage and divorce rates are calculated from provisional counts received from State health departments.</i></p>
 <a href="about.html"><h6>About</h6></a>
 <a href="https://www.cdc.gov/nchs/nvss/marriage-divorce.htm " target="_blank"><h6>Data Source</h6></a>   
 <p> &copy; <i>Copyright UofM Data Bootcamp 2020</i></p>        
