--- a/templates/about.html
+++ b/templates/about.html
@@ -117,8 +117,8 @@ a:hover{
 <div class="row">
 <div class="col-md-6">
 <p>
-  <a href="http://127.0.0.1:5000/api/v1.0/about.html"target="_blank"><h6>About</h6></a>
-  <a href="http://127.0.0.1:5000/api/v1.0/index.html"target="_blank"><h6>Dashboard</h6></a>
+  <a href="about.html"><h6>About</h6></a>
+  <a href="index.html"><h6>Dashboard</h6></a>
   <a href="https://www.cdc.gov/nchs/nvss/marriage-divorce.htm"target="_blank"><h6>Data Source</h6></a><br>
   &copy; <i>Copyright UofM Data Bootcamp 2020</i>
 </p>
