cleaned website redirect for about

--- a/templates/about.html
+++ b/templates/about.html
@@ -73,8 +73,6 @@ a:hover{
 </div>
 </div>
 <div class="container-fluid">
-  <h4>Team Members</h4>
-  <p class="text-dark"> <strong>Satish Nirankari and Thiripurasundari Kannappan</strong>.</p>
   <p class="text-body">
     Marriage is deemed essential for virtually everyone in India. 
     For the individual, marriage is the great watershed in life, marking the transition to adulthood. 
@@ -90,6 +88,8 @@ a:hover{
     This led us to analyse , Marriage and Divorce trend in America. 
     With different combinations and  details based on census we will visualise the data for understanding the trend.  
   </p>
+  <h4>Team Members</h4>
+  <p class="text-dark">Satish Nirankari and Thiripurasundari Kannappan</p>
   <h4>Project Details</h4>
   <ul style="list-style-type:disc;">
     <li>CDC csv data is loaded into Sqlite database and this is read as JSON into our javascript.</li>
