fixed about page footer

--- a/templates/about.html
+++ b/templates/about.html
@@ -85,7 +85,7 @@ a:hover{
     The divorce rate for subsequent marriages is even higher.
   </p>
   <p>
-    This led us to analyse , Marriage and Divorce trend in America. 
+    This led us to analyse, Marriage and Divorce trend in America. 
     With different combinations and  details based on census we will visualise the data for understanding the trend.  
   </p>
   <h4>Team Members</h4>
@@ -117,7 +117,7 @@ a:hover{
 <div class="row">
 <div class="col-md-6">
 <p>
-  <a href="about.html"><h6>About</h6></a>
+  <!-- <a href="about.html"><h6>About</h6></a> -->
   <a href="index.html"><h6>Dashboard</h6></a>
   <a href="https://www.cdc.gov/nchs/nvss/marriage-divorce.htm"target="_blank"><h6>Data Source</h6></a><br>
   &copy; <i>Copyright UofM Data Bootcamp 2020</i>
