--- a/templates/about.html
+++ b/templates/about.html
@@ -74,6 +74,7 @@ a:hover{
 </div>
 <div class="container-fluid">
   <p class="text-body">
+    <br>
     Marriage is deemed essential for virtually everyone in India. 
     For the individual, marriage is the great watershed in life, marking the transition to adulthood. 
     Arranging a marriage is a critical responsibility for parents and other relatives of both bride and groom.
@@ -96,7 +97,7 @@ a:hover{
     <li>Combination of D3, Plotly is used for Dashboard Visualization.</li>
     <li>Granim.js is the new javascript library that we are using in this project for the header.</li>
     <li>Menu with radio button for type and search button for Year are provided.</li>
-    <li>Visualization: Line Graph, Bar Graph and Colopleth Geo Map.</li>
+    <li>Visualization: Line Graph, Bar Graph and Choropleth Geo Map.</li>
   </ul>
   <h4>Conclusion</h4>
     <p>
@@ -128,7 +129,7 @@ a:hover{
   <a href="http://127.0.0.1:5000/api/v1.0/NationalMarriageDivorce"target="_blank"><h6>National Marriage and Divorce Rates by Year - JSON Data</h6></a>
   <a href="http://127.0.0.1:5000/api/v1.0/DivorceByState"target="_blank"><h6>Divorce Rates by State - JSON Data</h6></a>
   <a href="http://127.0.0.1:5000/api/v1.0/MarriageByState"target="_blank"><h6>Marriage Rates by State - JSON Data</h6></a>
-  <a href="http://127.0.0.1:5000/api/v1.0/USA"target="_blank"><h6>USA Cloropleth - JSON Data</h6></a>
+  <a href="http://127.0.0.1:5000/api/v1.0/USA"target="_blank"><h6>USA Choropleth - JSON Data</h6></a>
   </p>
   </div>
 </div>
