--- a/templates/about.html
+++ b/templates/about.html
@@ -67,14 +67,22 @@ a:hover{
     <div class="col-md-12">  
       <div class="bloc-logo">
         <canvas id="logo-canvas"></canvas>
-        <a href="index.html" class="logo-mask"><h2>Marriage isn't Dead Yet</h2></a>
+        <a href="about.html" class="logo-mask"><h2>Marriage isn't Dead Yet</h2></a>
     </div>
 </div>
 </div>
 </div>
 <div class="container-fluid">
-  <p class="text-body">
+  <div class="row">
+    <!-- <div class="col-md-2">
+      <a href="dashboardbystate.html"><h6>Dashboard by State</h6></a>
+    </div>
+    <div class="col-md-2">
+      <a href="dashboardbyeducation.html"><h6>Dashboard by Education</h6></a>
+    </div> -->
     <br>
+  </div>
+  <p class="text-body">
     Marriage is deemed essential for virtually everyone in India. 
     For the individual, marriage is the great watershed in life, marking the transition to adulthood. 
     Arranging a marriage is a critical responsibility for parents and other relatives of both bride and groom.
@@ -94,7 +102,7 @@ a:hover{
   <h4>Project Details</h4>
   <ul style="list-style-type:disc;">
     <li>CDC csv data is loaded into Sqlite database and this is read as JSON into our javascript.</li>
-    <li>Combination of D3, Plotly is used for Dashboard Visualization.</li>
+    <li>Combination of D3, Plotly and Web Scraping (Beautiful Soup) is used for Dashboard Visualization.</li>
     <li>Granim.js is the new javascript library that we are using in this project for the header.</li>
     <li>Menu with radio button for type and search button for Year are provided.</li>
     <li>Visualization: Line Graph, Bar Graph and Choropleth Geo Map.</li>
@@ -106,11 +114,11 @@ a:hover{
       In addition, the divorce rate has almost halved since 1990 despite concerns that more people are getting divorced than in years past.
     </p>
     <p>
-      Nevada was the state in 2018 that had the highest marriage rate in the United States, due to easy accessibility to get married there.
+      Nevada was the state in 2018 that had the highest marriage rate in the United States, due to easy accessibility to get married there.<br>
+      Nevada being the top state for divorce in 2018, with a rate of 4.4 divorces per 1,000 of the population.
     </p>
     <p>
-      Despite public opinion that divorce is becoming more frequent in the United States, the divorce rate actually seems to be declining, 
-      with Nevada being the top state for divorce in 2018, with a rate of 4.4 divorces per 1,000 of the population.
+      Despite public opinion that divorce is becoming more frequent in the United States, the divorce rate actually seems to be declining.
     </p>
   </h4>
 </div>
@@ -119,17 +127,15 @@ a:hover{
 <div class="col-md-6">
 <p>
   <!-- <a href="about.html"><h6>About</h6></a> -->
-  <a href="index.html"><h6>Dashboard</h6></a>
-  <a href="https://www.cdc.gov/nchs/nvss/marriage-divorce.htm"target="_blank"><h6>Data Source</h6></a><br>
+  <a href="dashboardbystate.html"><h6>Dashboard by State</h6></a>
+  <a href="dashboardbyeducation.html"><h6>Web Scraping by Education</h6></a>
   &copy; <i>Copyright UofM Data Bootcamp 2020</i>
 </p>
 </div>
 <div class="col-md-6">
   <p>
-  <a href="http://127.0.0.1:5000/api/v1.0/NationalMarriageDivorce"target="_blank"><h6>National Marriage and Divorce Rates by Year - JSON Data</h6></a>
-  <a href="http://127.0.0.1:5000/api/v1.0/DivorceByState"target="_blank"><h6>Divorce Rates by State - JSON Data</h6></a>
-  <a href="http://127.0.0.1:5000/api/v1.0/MarriageByState"target="_blank"><h6>Marriage Rates by State - JSON Data</h6></a>
-  <a href="http://127.0.0.1:5000/api/v1.0/USA"target="_blank"><h6>USA Choropleth - JSON Data</h6></a>
+    <a href="https://www.cdc.gov/nchs/nvss/marriage-divorce.htm " target="_blank"><h6>Marriage/Divorce by State - Data Source</h6></a>  
+    <a href="https://fivethirtyeight.com/features/marriage-isnt-dead-yet/"target="_blank"><h6>Web Scraping - Data Source</h6></a><br>
   </p>
   </div>
 </div>
@@ -145,6 +151,5 @@ a:hover{
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
 </body>
 </html>
